--- a/assignment-one-final.html
+++ b/assignment-one-final.html
@@ -3,7 +3,7 @@
 <body>
 
 
-<div style="background-image: beach.jpg"; 
+<div style="background-image: beach.jpg; 
 background-repeat:no-repeat;
 background-size: cover;
 background-attachment: fixed ">
