--- a/assignment-one-final.html
+++ b/assignment-one-final.html
@@ -6,7 +6,7 @@
 <div style="background-image: url('beach.jpg'); 
 background-repeat:no-repeat;
 background-size: cover;
-background-attachment: fixed ">
+background-attachment: fixed "</div>
 
 <br> </br> 
 
@@ -94,7 +94,7 @@ What are you waiting for? Head on down with your family and friends!
 
 <pre style= "text-align: left; font-size: 20px; font-family: courier" >
 
-<p style= "text-align: center"> Located behind Car Park F1
+<p style= "text-align: center" Located behind Car Park F1>
 <img src="map.jpg" alt="map" width="1156" height="651">
 
 <b>OPENING HOURS: 730am-10pm</b>
