--- a/assignment-one-final.html
+++ b/assignment-one-final.html
@@ -6,7 +6,8 @@
 <div style="background-image: url('beach.jpg'); 
 background-repeat:no-repeat;
 background-size: cover;
-background-attachment: fixed "</div>
+background-attachment: fixed"
+</div>
 
 <br> </br> 
 
@@ -37,8 +38,10 @@ background-attachment: fixed "</div>
 
 
 
-<div style="background-color:white; color:black;padding:100px;">
-<h1 style= " font-family: verdana; text-align: center" > <font color= "purple"> Features </font> </h1>
+<div style="background-color:white; color:black;padding:100px;"
+</div>
+
+<h1 style= "color: purple; font-family: verdana; text-align: center">  Features  </h1>
 
 <pre style= "text-align: left; font-size: 20px; font-family: courier" >
 <b><ins>Streetcourse</ins> </b>- The Streetcourse caters to all riders. It provides elements for both intermediate and advanced skaters 
@@ -73,7 +76,7 @@ them to enter competitions.
 
 
 
-<h1 style= " font-family: verdana; text-align: center" ><font color= "purple"> Bonding </font> </h1>
+<h1 style= "color:purple; font-family: verdana; text-align: center" > Bonding </h1>
 
 <pre style= "text-align: left; font-size: 20px; font-family: courier" >
 Enjoy a picnic with your family and friends overlooking the sea while spectating skating enthusiasts in the form of 
@@ -85,22 +88,20 @@ What are you waiting for? Head on down with your family and friends!
 
 <p style= "text-align: center"> <img src="skateparkfilter.jpg" alt="skateparkfilter" width="590" height="388">
 </p>
+
 <br> </br>
 <br></br>
 
 
 
-<h1 style= " font-family: verdana; text-align: center" > <font color= "purple"> Getting Here </font> </h1>
+<h1 style= " color:purple; font-family: verdana; text-align: center" > Getting Here </h1>
 
-<pre style= "text-align: left; font-size: 20px; font-family: courier" >
 
-<p style= "text-align: center" Located behind Car Park F1>
+<pre style= "text-align: center; font-size: 20px; font-family: courier"> Located behind Car Park F1 
 <img src="map.jpg" alt="map" width="1156" height="651">
 
 <b>OPENING HOURS: 730am-10pm</b>
-</p>
 </pre>
-</div> 
 
 </body>
 </html>
